<resources>
    <string name="app_name">Converter</string>
    <string name="The_name">Converter</string>
    <string name="enter_number">Enter Number</string>
    <string name="submit">Submit</string>
    <string name="reset">Reset</string>
    <string name="des">Dec</string>
    <string name="bin">Bin</string>
    <string name="oct">Oct</string>
    <string name="hex">Hex</string>
    <string name="result">result</string>
    <string-array name="converters">
        <item>Decimal</item>
        <item>Binary</item>
        <item>Octal</item>
        <item>Hex</item>
    </string-array>
</resources>